# ogl2

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  FontCreator.sln  Makefile  OGL2.sln  README.md  convert.sh
Font_creator/: FCAM.Manifest  Font_creator.rc  Font_creator.vcproj  resource.h
Font_creator/Fonts/: Consolas.LFont  Courier New.LFont  Courier.LFont  DS Stamper.LFont  Georgia.LFont  Morpheus.LFont  OpenSymbol.LFont  Segoe UI.LFont  Verdana.LFont  Wide Latin.LFont  zlionheart.LFont
Font_creator/src/: main.cpp
Font_creator/src/IL/: ilut.h
OGL2/: OGL2.rc  OGL2.vcproj  history.txt  resource.h
OGL2/data/: config.cfg
OGL2/data/VIDEO/: logo.avi
OGL2/src/: LocusAFX.cpp  LocusAFX.h  MAIN.cpp  RenderScene.cpp  main.cpp  main.h  renderscene.cpp
OGL2/src/Ex/AL/: alut.h
OGL2/src/Ex/IL/: ilu.h
OGL2/src/Ex/MesaGL/: GL.H  glew.h  wglew.h
OGL2/src/Ex/MesaGL/linux/: GLwDrawA.h  GLwDrawAP.h  GLwMDrawA.h  GLwMDrawAP.h  gl.h  glu.h  glx.h  glxext.h  glxproto.h  glxtokens.h  osmesa.h
OGL2/src/Ex/ode/: collision.h  collision_space.h  common.h  contact.h  error.h  export-dif.h  mass.h  matrix.h  memory.h  misc.h  objects.h  ode.h  odecpp.h  odecpp_collision.h  odecpp_old.h  odemath.h  rotation.h  timer.h
OGL2/src/classes/: ApplicationClass.cpp  ApplicationClass.h  Console.cpp  Console.h  ConsoleFunctions.cpp  ConsoleFunctions.h  Files.cpp  Files.h  Input.h  Logo.h  ParticleSystem.cpp  ParticleSystem.h  PhysiX.h  ResMan.h  ResMan_fixed.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Time.h  camera.cpp  camera.h  globals.h  input.h  lwo_mesh.cpp  lwo_mesh.h  mesh_common.h  oGL.h  objects.cpp  objects.h  resman.cpp  simple_mesh.cpp  simple_mesh.h  text.cpp  text.h  texture.cpp  texture.h
OGL2/src/classes/Video/: AVI_player.cpp  AVI_player.h
OGL2/src/classes/cons/: CCFuncs.cpp  CCFuncs.h  FuncsMap.cpp  FuncsMap.h
OGL2/src/classes/gl/: glmat.cpp  glmat.h  immediate.cpp  immediate.h  mat4.h  shader.cpp  shader.h
OGL2/src/classes/shared/: MyMath.cpp  MyMath.h  MyMath2.h  assert.cpp  assert.h
OGL2/src/classes/sound/: Sound.cpp  Sound.h  sound.cpp
OGL2/tests/: gl_smoke.cpp
font_creator_gtk/: .gitignore  CMakeLists.txt  README.md
font_creator_gtk/src/: cp1251.h  fontfile.cpp  fontfile.h  main.cpp
ssrc/: iff.h
